# Codex-OS

./: .env.example  AGENTS.md  editorconfig  eslintrc.cjs  markdownlint.json  prettierignore  pyproject.toml  tsconfig.json  vercel.json  wrangler.toml
.codex-os/instructions/core/: analyze-product.md  execute-task.md  execute-tasks.md  plan-product.md
.codex-os/standards/: tech-stack.md
docs/: LICENSE  readme.md
move to HOME/.codex/: AGENTS.md
move to HOME/.codex-os/instructions/core/: create-spec.md  plan-product.md
scripts/: install-global.sh
